--- a/Message-index.html
+++ b/Message-index.html
@@ -18,94 +18,98 @@
 	<body>
 		<!-- 顶栏 -->
 		<nav class="top-header sticky-top shadow">
-			<div style="height: 0 auto;color: white;font-size: 6vw;font-weight: bold;justify-content: center;"
-			 align="center">
+			<div style="height: 0 auto;color: white;font-size: 6vw;font-weight: bold;justify-content: center;" align="center">
 				消息通知
 			</div>
 		</nav>
 		<!-- 除顶栏外的 -->
 		<div class="container-index-liu" id="container-index-liu">
-				<!-- 置顶通知消息 -->
-				<div class="list-header-liu" id="list-top-liu" style="background-color:#4C51B11E;border: 0px solid #4C51B11E;">
-					<!-- 铃铛头像 -->
-					<svg class="icon" aria-hidden="true" style="font-size: 90px;margin: 8px 30px;">
-						<use xlink:href="#icon-iconbell"></use>
-					</svg>
+			<!-- 置顶通知消息 -->
+			<div class="list-header-liu" id="list-top-liu" style="background-color:#4C51B11E;border: 0px solid #4C51B11E;">
+				<!-- 铃铛头像 -->
+				<svg class="icon" aria-hidden="true" style="font-size: 90px;margin: 8px 30px;">
+					<use xlink:href="#icon-iconbell"></use>
+				</svg>
+				<!-- 文本 -->
+				<span class="text-liu" id="top-text-liu">您的交易已完成</span>
+			</div>
+			<!-- 非置顶消息 -->
+			<ul class="ul-liu" id="ul-liu">
+				<!-- 一条消息 -->
+				<li class="list-item" id="list-item1">
+					<!-- 头像 -->
+					<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
+						<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+					</div>
 					<!-- 文本 -->
-					<span class="text-liu" id="top-text-liu">您的交易已完成</span>
-				</div>
-				<!-- 非置顶消息 -->
-				<ul class="ul-liu" id="ul-liu">
-					<!-- 一条消息 -->
-					<li class="list-item" id="list-item1">
-						<!-- 头像 -->
-						<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
-							<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
-						</div>
-						<!-- 文本 -->
-						<span class="text-liu" id="list-item-text1">你觉得这个怎么样</span>
-					</li>
-					<!-- 一条消息 -->
-					<li class="list-item" id="list-item2">
-						<!-- 头像 -->
-						<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
-							<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
-						</div>
-						<!-- 文本 -->
-						<span class="text-liu" id="list-item-text2">你喜欢就下单吧</span>
-					</li>
-					<li class="list-item" id="list-item3">
-						<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
-							<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
-						</div>
-						<span class="text-liu" id="list-item-text3">明天行吗</span>
-					</li>
-					<li class="list-item" id="list-item4">
-						<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
-							<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
-						</div>
-						<span class="text-liu" id="list-item-text4">[图片]</span>
-					</li>
-					<li class="list-item" id="list-item5">
-						<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
-							<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
-						</div>
-						<span class="text-liu" id="list-item-text5">[语音]</span>
-					</li>
-				</ul>
+					<span class="text-liu" id="list-item-text1">你觉得这个怎么样</span>
+				</li>
+				<!-- 一条消息 -->
+				<li class="list-item" id="list-item2">
+					<!-- 头像 -->
+					<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
+						<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+					</div>
+					<!-- 文本 -->
+					<span class="text-liu" id="list-item-text2">你喜欢就下单吧</span>
+				</li>
+				<li class="list-item" id="list-item3">
+					<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
+						<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+					</div>
+					<span class="text-liu" id="list-item-text3">明天行吗</span>
+				</li>
+				<li class="list-item" id="list-item4">
+					<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
+						<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+					</div>
+					<span class="text-liu" id="list-item-text4">[图片]</span>
+				</li>
+				<li class="list-item" id="list-item5">
+					<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
+						<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+					</div>
+					<span class="text-liu" id="list-item-text5">[语音]</span>
+				</li>
+			</ul>
 		</div>
-	<!-- 固定底栏 -->
-	<div class="footer-bot">
-		<div class="container-fluid" >
-			<div class="row" >
-				<div class="col-2"  align="center" id="home" onclick="">
-					<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top: 2vw;">							
-					<use xlink:href="#icon-zhuye"></use>
-					</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">主页</a> -->
-				</div>
-				<div class="col-2" align="center" id="search" onclick="">
-					<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;">
-						<use xlink:href="#icon-sousuo"></use>
-					</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">搜索</a> -->
-				</div>
-				<div class="col-4"></div>
-				<div style="height:12vw;position: fixed;width: 100%; bottom:6vw;justify-content: center;" align="center" id="publish" onclick="">
-					<svg class="icon" aria-hidden="true" style="font-size: 18vw;">
-						<use xlink:href="#icon-xinzeng"></use>
-					</svg>
-				</div>
-				<div class="col-2"  align="center" id="message" onclick="">
-					<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;color: black;">
-						<use xlink:href="#icon-xiaoxi"></use>
-					</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">消息</a> -->
-				</div>
-				<div class="col-2" align="center" id="mine" onclick="">
-					<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;">
-						<use xlink:href="#icon-wode"></use>
-					</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">我的</a> -->
+		<!-- 固定底栏 -->
+		<div class="footer-bot" style="z-index: 9999;">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-2" align="center" id="home">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top: 2vw;" onclick="window.location.href='index.html'">
+							<use xlink:href="#icon-zhuye"></use>
+						</svg>
+						<!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">主页</a> -->
+					</div>
+					<div class="col-2" align="center" id="search">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;" onclick="window.location.href='search.html'">
+							<use xlink:href="#icon-sousuo"></use>
+						</svg>
+						<!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">搜索</a> -->
+					</div>
+					<div class="col-4"></div>
+					<div style="height:12vw;position: fixed;margin-left: 41vw;bottom:6vw;justify-content: center;z-index: 0;" align="center"
+					 id="publish">
+						<svg class="icon" aria-hidden="true" style="font-size: 18vw;" onclick="window.location.href='Add.html'">
+							<use xlink:href="#icon-xinzeng"></use>
+						</svg>
+					</div>
+					<div class="col-2" align="center" id="message">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;color: black;" onclick="window.location.href='Message-index.html'">
+							<use xlink:href="#icon-xiaoxi"></use>
+						</svg>
+						<!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">消息</a> -->
+					</div>
+					<div class="col-2" align="center" id="mine">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;" onclick="window.location.href='initial.html'">
+							<use xlink:href="#icon-wode"></use>
+						</svg>
+						<!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">我的</a> -->
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 	</body>
 </html>
