--- a/Add.html
+++ b/Add.html
@@ -173,7 +173,7 @@
 			<div class="col-2">
 
 			</div>
-			<div class="col-2">
+		<!-- 	<div class="col-2">
 				<svg class="icon" aria-hidden="true" style="color: var(--sColor);font-size: 12vw;margin-top: 2vw;">
 					<use xlink:href="#icon-xinzeng"></use>
 				</svg>
@@ -183,7 +183,7 @@
 			</div>
 			<div class="col-2">
 
-			</div>
+			</div> -->
 		</div>
 		<div class="bottom-liu shadow-irreguler" style="width: 100%;height: 10vw;background-color: var(--fColor);">
 			<div align="center" style="font-size: 5vw;color: white;padding-top: 1vw;">
