--- a/Address-university.html
+++ b/Address-university.html
@@ -47,9 +47,10 @@
 			<div class="container-fluid" style="padding-top: 2vw;padding-bottom: 2vw;">
 				<div class="row">
 					<div class="col-1" align="center" style="vertical-align:bottom;margin-left: 1vw;margin-right: 3vw;">
+						<a href="javascript:history.go(-1);">
 						<svg class="icon" aria-hidden="true" style="font-size: 10vw;color: white;">
 							<use xlink:href="#icon-fanhui"></use>
-						</svg>
+						</svg></a>
 					</div>
 					<!-- 输入框 -->
 					<div class="index-zhe shadow position-liu col-10">
