--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<object class="partnerLogo" data="asserts/plugins/SVG/wenzi.svg" type="image/svg+xml" style="margin-top: 1vw;"></object>
 					</div>
 					<div class="col" style="padding: 0vw 3vw">
-						<div class="area-zhe index-zhe" style="margin-top: 1vw;font-size: 3vw;" align="center"><svg class="icon"
+						<div class="area-zhe index-zhe" style="margin-top: 1vw;font-size: 3vw;" align="center"  onclick="window.location.href='Address.html'"><svg class="icon"
 							 aria-hidden="true" style="color: var(--fColor);">
 								<use xlink:href="#icon-weizhi"></use>
 							</svg><a style="color: var(--fColor);">日照</a></div>
@@ -77,7 +77,7 @@
 						<!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">主页</a> -->
 					</div>
 					<div class="col-2" align="center" id="search" >
-						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;" onclick="window.location.href='search.html'">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;" onclick="window.location.href='searchdnmain.html'">
 							<use xlink:href="#icon-sousuo"></use>
 						</svg>
 						<!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">搜索</a> -->
