--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -21,8 +21,10 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-2" align="center" style="vertical-align:bottom;">
+						<a href="javascript:history.go(-1);">
 						<svg class="icon" aria-hidden="true" style="font-size: 10vw;color: white;">
 							<use xlink:href="#icon-fanhui"></use>
+							</a>
 						</svg>
 					</div>
 					<div class="col-8" style="height: 0 auto;color: white;font-size: 6vw;font-weight: bold;justify-content: center;">
