--- a/index.html
+++ b/index.html
@@ -41,30 +41,126 @@
 				</div>
 			</div>
 		</nav>
-		<div class="container-bar-index">
-			<a style="font-size:3vw;">
-				尊敬的信息科学与工程学院：
-				您好！
-				我们是悠悦易存创业团队，非常感谢您对我们的关注，我们将近期的工作情况向您汇报。
-				在院领导的关怀与支持下，创业团队经过前期大范围的问卷调查，获得了大量的用户数据，用户反映了目前他们的需求以及我们需要针对的用户痛点，为了更好地研发产品，我们于2019年2月进行了公司注册，名称为：悠悦易存网络科技（日照）有限公司，落地于曲阜师范大学教授花园北门沿街大学生创业孵化基地2号，并获得了悠悦智能网络科技（南京）有限公司的种子投资。我们跟随投资方进行了产品研发的有关培训，参与了产品的一部分开发，熟悉了整个项目的整体架构。在2019年5月25日，曲阜师范大学（日照）图书馆首批部署完成，曲阜校区图书馆于同月29日部署完成。
-
-				曲阜师范大学（曲阜）图书馆实拍 曲阜师范大学（日照）图书馆实拍
-				2019年6月1日，项目正式运营，首批寄存柜共132个格子，日照校区72格，曲阜校区60格，日照校区于一周之内72格全部占满，曲阜校区也在6月15日全部占满，这个成绩是我们没有想到的，成绩的取得也离不开领导们的大力支持。
-				通过创业，我们学到了:企业注册、管理、运营的相关知识，产品开发的流程、知识，人际交往等知识。我们参与开发了考勤系统、订座系统与寄存系统，完善了产品使用手册。我们参加了联通创业社的“金点子”大赛并获得了日照市第二名的成绩，我们参加了创业济宁比赛，最终在80组队伍中取得第12名的成绩。在我们即将参加的互联网＋大赛中我们将尽我们最大的努力取得最优异的成绩。
-				通过本次创业项目，我们把学习的C语言、HTML、数据结构、数据库等课程的知识运用到实际的工作中，在开发工程中我们发现学生在课堂所学不进行实操是很难熟练掌握的，产品开发需要顾及方方面面，在学好课本理论的前提下一定要多实践多训练，当然我们在项目开发过程中应用了课堂所学的数组、指针等知识点，学到了图形化设计和实现、平面设计、会计、公众号运营、数据可视化等新知识点。在老师的指导下，我们掌握了市场规律、技术转化、开发流程、公司运营等新知识。我们意识到我们需要学习的知识还有好多，一个企业的运营不仅仅需要技术，还需要人脉、管理与营销。
-				公司自建立至今取得了良好的成绩：
-
-
-
-				在未来我们将推进悠悦易存物联空间的建设，实现真正的物联网，解决图书馆座位状态未知、自习室利用效率过低等问题。
-
-				悠悦易存物联空间
-
-				感谢各位领导的支持与帮助，我们将继续努力。
-				悠悦易存创业团队
-				2019年6月15日
-
-			</a>
+		<div class="active" style="height: auto;">
+			<div class="container-fluid">
+				<div class="centerarea2" style="box-shadow: inset 5px 5px 90px white,5px 5px 20px #00000044">
+					<div class="row">
+						<div class="col-2">
+							<div class="leftfu2">
+								<ul>
+									<li>
+										<div class="circlefu">
+											<div class="head-photo">
+												<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+											</div>
+		
+										</div>
+									</li>
+									<li>
+										<div class="guanzhu" style="margin-top: 10px;display: inline-block;font-size:30px;">
+											<a href="#">
+												<svg class="icon" aria-hidden="true" style="vertical-align:middle;">
+													<use xlink:href="#icon-shoucang"></use>
+												</svg><br>关注</br></a>
+										</div>
+									</li>
+									<li>
+										<div class="siliao" style="margin-top: 10px;display:inline-block;font-size:30px;">
+											<a href="#">
+												<svg class="icon" aria-hidden="true" style="vertical-align:middle;">
+													<use xlink:href="#icon-siliao"></use>
+												</svg><br>私聊</br></a>
+										</div>
+									</li>
+									<li>
+										<div class="fenxiang" style="margin-top: 10px;display:inline-block;font-size:30px;">
+											<p>
+												<a href="#">
+													<svg class="icon" aria-hidden="true" style="vertical-align:middle;">
+														<use xlink:href="#icon-fenxiang"></use>
+													</svg><br>分享</br></a>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-10">
+							<div class="middlefu2">
+								<div class="container-fluid">
+									<div class="row" style="margin-top: -40px;">
+										<div class="col-2" align="left" id="" onclick="" style="font-size:90%;">
+											李四
+										</div>
+										<div class="col-6" align="left" id="home" onclick="">
+											<svg class="icon" aria-hidden="true" style="color: var(--fColor);">
+												<use xlink:href="#icon-weizhi"></use>
+											</svg><a style="color: var(--fColor);">东升园</a>
+										</div>
+										<div class="col-4" align="right" id="home" onclick="" style="font-size: 50%;margin-top: 10px;color: var(--fColor);">
+											9分钟前
+										</div>
+									</div>
+								</div>
+								<table>
+									<tr>
+										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104806&di=8473e5efba3c4f67bd2e43b42f8705e3&imgtype=0&src=http%3A%2F%2Fimage3.suning.cn%2Fuimg%2Fb2c%2Fnewcatentries%2F0070119542-000000000635831682_1_800x800.jpg"
+											 alt="computer">
+										</td>
+										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104807&di=2f8357fa34e51cbe685eef1e9e7dba8f&imgtype=0&src=http%3A%2F%2Fimg0.pconline.com.cn%2Fpconline%2F1109%2F28%2F2544311_07.jpg"
+											 alt="computer">
+										</td>
+										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104807&di=2f8357fa34e51cbe685eef1e9e7dba8f&imgtype=0&src=http%3A%2F%2Fimg0.pconline.com.cn%2Fpconline%2F1109%2F28%2F2544311_07.jpg"
+											 alt="computer">
+										</td>
+									</tr>
+									<tr>
+										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104806&di=8473e5efba3c4f67bd2e43b42f8705e3&imgtype=0&src=http%3A%2F%2Fimage3.suning.cn%2Fuimg%2Fb2c%2Fnewcatentries%2F0070119542-000000000635831682_1_800x800.jpg"
+											 alt="computer">
+										</td>
+										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104807&di=2f8357fa34e51cbe685eef1e9e7dba8f&imgtype=0&src=http%3A%2F%2Fimg0.pconline.com.cn%2Fpconline%2F1109%2F28%2F2544311_07.jpg"
+											 alt="computer">
+										</td>
+										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104806&di=8473e5efba3c4f67bd2e43b42f8705e3&imgtype=0&src=http%3A%2F%2Fimage3.suning.cn%2Fuimg%2Fb2c%2Fnewcatentries%2F0070119542-000000000635831682_1_800x800.jpg"
+											 alt="computer">
+										</td>
+		
+									</tr>
+									<tr>
+										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104807&di=2f8357fa34e51cbe685eef1e9e7dba8f&imgtype=0&src=http%3A%2F%2Fimg0.pconline.com.cn%2Fpconline%2F1109%2F28%2F2544311_07.jpg"
+											 alt="computer">
+										</td>
+										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104806&di=8473e5efba3c4f67bd2e43b42f8705e3&imgtype=0&src=http%3A%2F%2Fimage3.suning.cn%2Fuimg%2Fb2c%2Fnewcatentries%2F0070119542-000000000635831682_1_800x800.jpg"
+											 alt="computer">
+										</td>
+									</tr>
+								</table>
+		
+								<form action="" method="get">
+									<label><input name="xuanze" type="checkbox" value="" />&nbsp;&nbsp;&nbsp;&nbsp;惠普笔记本-6成新-￥3320</label><br />
+									<label><input name="xuanze" type="checkbox" value="" />&nbsp;&nbsp;&nbsp;&nbsp;戴尔笔记本-7成新-￥5620</label><br />
+									<label><input name="xuanze" type="checkbox" value="" />&nbsp;&nbsp;&nbsp;&nbsp;联想笔记本-7成新-￥3380</label><br />
+								</form><br />
+								<a href="#" style="font-color:#4C51B1">设备 &nbsp;</a>
+								<form action="" method="get">
+									<label><input name="jiaoyi" type="checkbox" value="" />&nbsp;&nbsp;平台交易</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+									<label><input name="jiaoyi" type="checkbox" value="" />&nbsp;&nbsp;当面交易</label>
+								</form>
+								<div class="suoxiao" style="margin-bottom: 5%;">
+									<br />
+									<br />
+									<a href="#">
+										<svg class="icon" aria-hidden="true" style="color:#4C51B1;margin-left:50%;opacity:0.8; font-size:50px;">
+											<use xlink:href="#icon-shousuo"></use>
+										</svg>&nbsp;&nbsp;&nbsp;
+									</a>
+									<a href="#">立即购买</a>
+								</div>
+							</div>
+		
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- 固定底栏 -->
 		<div class="footer-bot" style="z-index: 1000;">
@@ -77,7 +173,7 @@
 						<!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">主页</a> -->
 					</div>
 					<div class="col-2" align="center" id="search" >
-						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;" onclick="window.location.href='searchdnmain.html'">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;" onclick="window.location.href='searchMain.html'">
 							<use xlink:href="#icon-sousuo"></use>
 						</svg>
 						<!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">搜索</a> -->
