--- a/initial.html
+++ b/initial.html
@@ -246,14 +246,14 @@
 						</svg>
 						<!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">主页</a> -->
 					</div>
-					<div class="col-2" align="center" id="search">
-						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;" onclick="window.location.href='search.html'">
+					<div class="col-2" align="center" id="search" >
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;" onclick="window.location.href='searchMain.html'">
 							<use xlink:href="#icon-sousuo"></use>
 						</svg>
 						<!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">搜索</a> -->
 					</div>
 					<div class="col-4"></div>
-					<div style="height:12vw;position: fixed;margin-left: 41vw;bottom:6vw;justify-content: center;z-index: 0;" align="center"
+					<div style=" height:12vw;position: fixed;margin-left: 41vw;bottom:6vw;justify-content: center;z-index: 0;" align="center"
 					 id="publish">
 						<svg class="icon" aria-hidden="true" style="font-size: 18vw;" onclick="window.location.href='Add.html'">
 							<use xlink:href="#icon-xinzeng"></use>
