修改主页部分显示效果

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 		</nav>
 		<div class="active" style="height: auto;">
 			<div class="container-fluid">
-				<div class="centerarea2" style="box-shadow: inset 5px 5px 90px white,5px 5px 20px #00000044">
+				<div class="centerarea2" style="box-shadow: inset 5px 5px 90px white,5px 5px 20px #00000044;">
 					<div class="row">
-						<div class="col-2">
-							<div class="leftfu2">
+						<div class="col-2" style="margin-left: 0.625rem;">
+							<div class="leftfu2" >
 								<ul>
 									<li>
 										<div class="circlefu">
@@ -84,11 +84,11 @@
 								</ul>
 							</div>
 						</div>
-						<div class="col-10">
+						<div class="col-10" style="margin-left: 6.25rem;">
 							<div class="middlefu2">
 								<div class="container-fluid">
-									<div class="row" style="margin-top: -40px;">
-										<div class="col-2" align="left" id="" onclick="" style="font-size:90%;">
+									<div class="row" style="margin-top: -40px; margin-left: 0.625rem;">
+										<div class="col-3" align="left" id="" onclick="" style="font-size:90%;">
 											李四
 										</div>
 										<div class="col-6" align="left" id="home" onclick="">
@@ -96,7 +96,7 @@
 												<use xlink:href="#icon-weizhi"></use>
 											</svg><a style="color: var(--fColor);">东升园</a>
 										</div>
-										<div class="col-4" align="right" id="home" onclick="" style="font-size: 50%;margin-top: 10px;color: var(--fColor);">
+										<div class="col-3" align="right" id="home" onclick="" style="font-size: 50%;margin-top: 10px;color: var(--fColor);">
 											9分钟前
 										</div>
 									</div>
