又修改了主页的布局

--- a/index.html
+++ b/index.html
@@ -43,40 +43,39 @@
 		</nav>
 		<div class="active" style="height: auto;">
 			<div class="container-fluid">
-				<div class="centerarea2" style="box-shadow: inset 5px 5px 90px white,5px 5px 20px #00000044;">
+				<div class="centerarea2" style="box-shadow: inset 1.25% 1.25% 22.5% white,1.25% 1.25% 5% #00000044;">
 					<div class="row">
-						<div class="col-2" style="margin-left: 0.625rem;">
+						<div class="col-2" style="margin-left: 2.5%;">
 							<div class="leftfu2" >
 								<ul>
 									<li>
 										<div class="circlefu">
-											<div class="head-photo">
+											<div class="head-photo" style="width: 18vw; margin-top: 25%;">
 												<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
 											</div>
-		
 										</div>
 									</li>
 									<li>
-										<div class="guanzhu" style="margin-top: 10px;display: inline-block;font-size:30px;">
+										<div class="guanzhu" style="margin-top: 2.5%;display: inline-block;font-size:5.6vw; text-align-last: center;">
 											<a href="#">
-												<svg class="icon" aria-hidden="true" style="vertical-align:middle;">
+												<svg class="icon" aria-hidden="true" style="vertical-align:middle; width: 10vw;">
 													<use xlink:href="#icon-shoucang"></use>
 												</svg><br>关注</br></a>
 										</div>
 									</li>
 									<li>
-										<div class="siliao" style="margin-top: 10px;display:inline-block;font-size:30px;">
+										<div class="siliao" style="margin-top: 2.5%;display:inline-block;font-size:5.6vw; text-align-last: center;">
 											<a href="#">
-												<svg class="icon" aria-hidden="true" style="vertical-align:middle;">
+												<svg class="icon" aria-hidden="true" style="vertical-align:middle; width: 10vw;">
 													<use xlink:href="#icon-siliao"></use>
 												</svg><br>私聊</br></a>
 										</div>
 									</li>
 									<li>
-										<div class="fenxiang" style="margin-top: 10px;display:inline-block;font-size:30px;">
+										<div class="fenxiang" style="margin-top: 2.5%;display:inline-block;font-size:5.6vw; text-align-last: center;">
 											<p>
 												<a href="#">
-													<svg class="icon" aria-hidden="true" style="vertical-align:middle;">
+													<svg class="icon" aria-hidden="true" style="vertical-align:middle; width: 10vw;">
 														<use xlink:href="#icon-fenxiang"></use>
 													</svg><br>分享</br></a>
 										</div>
@@ -84,19 +83,19 @@
 								</ul>
 							</div>
 						</div>
-						<div class="col-10" style="margin-left: 6.25rem;">
+						<div class="col-10" style="margin-left: 25%;">
 							<div class="middlefu2">
 								<div class="container-fluid">
-									<div class="row" style="margin-top: -40px; margin-left: 0.625rem;">
-										<div class="col-3" align="left" id="" onclick="" style="font-size:90%;">
+									<div class="row" style="margin-top: -10%; margin-left: 2.5%;">
+										<div class="col-3" align="left" id="" onclick="" style="font-size:5.6vw;">
 											李四
 										</div>
 										<div class="col-6" align="left" id="home" onclick="">
 											<svg class="icon" aria-hidden="true" style="color: var(--fColor);">
 												<use xlink:href="#icon-weizhi"></use>
-											</svg><a style="color: var(--fColor);">东升园</a>
+											</svg><a style="font-size: 5.8vw;color: var(--fColor);">东升园</a>
 										</div>
-										<div class="col-3" align="right" id="home" onclick="" style="font-size: 50%;margin-top: 10px;color: var(--fColor);">
+										<div class="col-3" align="right" id="home" onclick="" style="font-size: 3vw;margin-top: 2.5%;color: var(--fColor);">
 											9分钟前
 										</div>
 									</div>
@@ -135,25 +134,19 @@
 									</tr>
 								</table>
 		
-								<form action="" method="get">
+								<form action="" method="get" style="font-size: 4.6vw;">
 									<label><input name="xuanze" type="checkbox" value="" />&nbsp;&nbsp;&nbsp;&nbsp;惠普笔记本-6成新-￥3320</label><br />
 									<label><input name="xuanze" type="checkbox" value="" />&nbsp;&nbsp;&nbsp;&nbsp;戴尔笔记本-7成新-￥5620</label><br />
 									<label><input name="xuanze" type="checkbox" value="" />&nbsp;&nbsp;&nbsp;&nbsp;联想笔记本-7成新-￥3380</label><br />
 								</form><br />
-								<a href="#" style="font-color:#4C51B1">设备 &nbsp;</a>
-								<form action="" method="get">
+								<a href="#" style="font-color:#4C51B1;font-size: 5.4vw;">设备 &nbsp;</a>
+								<form action="" method="get" style="font-size: 4.6vw;">
 									<label><input name="jiaoyi" type="checkbox" value="" />&nbsp;&nbsp;平台交易</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 									<label><input name="jiaoyi" type="checkbox" value="" />&nbsp;&nbsp;当面交易</label>
 								</form>
 								<div class="suoxiao" style="margin-bottom: 5%;">
-									<br />
-									<br />
-									<a href="#">
-										<svg class="icon" aria-hidden="true" style="color:#4C51B1;margin-left:50%;opacity:0.8; font-size:50px;">
-											<use xlink:href="#icon-shousuo"></use>
-										</svg>&nbsp;&nbsp;&nbsp;
-									</a>
-									<a href="#">立即购买</a>
+									<!-- <br /> -->
+									<a href="#" style="font-size: 6vw;">立即购买</a>
 								</div>
 							</div>
 		
